--- a/ng2/src/app/sections/header/header.component.html
+++ b/ng2/src/app/sections/header/header.component.html
@@ -1,19 +1,29 @@
+<auth-component></auth-component>
 <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarOpts" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand col-md-10" routerLink="/"><i class="fa fa-thumb-tack" aria-hidden="true"></i>&nbsp;TASK MANAGER</a>
+    <a class="navbar-brand" routerLink="/"><i class="fa fa-thumb-tack" aria-hidden="true"></i>&nbsp;TASK MANAGER</a>
     <div class="collapse navbar-collapse" id="navbarOpts">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" *ngIf="authenticated">
                 <a class="nav-link" routerLink="/projects" routerLinkActive="active">Projects</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" *ngIf="authenticated">
                 <a class="nav-link" routerLink="/tasks" routerLinkActive="active">Tasks</a>
             </li>
         </ul>
+        <div class="row align-content-center ml-auto">
+            <button class="btn btn-outline-success mr-1" type="button" *ngIf="!authenticated" (click)="login()">
+                <i class="fa fa-sign-in" aria-hidden="true"></i>&nbsp;Sign in
+            </button>
+            <p class="m-0 p-1" style="color: white" *ngIf="authenticated">Signed in as <b>damoresa</b></p>
+            <button class="btn btn-outline-danger ml-2 mr-1" type="button" *ngIf="authenticated" (click)="logout()">
+                <i class="fa fa-sign-out" aria-hidden="true"></i>&nbsp;Sign out
+            </button>
+        </div>
     </div>
 </nav>
