--- a/ng2/src/app/views/+tasks/tasks.component.html
+++ b/ng2/src/app/views/+tasks/tasks.component.html
@@ -49,7 +49,7 @@
 							</div>
 							-->
 							<div class="col-md-12 text-right">
-								<button type="button" class="btn btn-secondary" (click)="filterForm.reset()"><i class="fa fa-trash fa-1x" aria-hidden="true"></i>&nbsp;Clear</button>
+								<button type="button" class="btn btn-secondary" (click)="resetFilter()"><i class="fa fa-trash fa-1x" aria-hidden="true"></i>&nbsp;Clear</button>
 								<button class="btn btn-primary"><i class="fa fa-search fa-1x" aria-hidden="true"></i>&nbsp;Search</button>
 							</div>
 						</form>
