--- a/ng2/src/styles/scss/app.scss
+++ b/ng2/src/styles/scss/app.scss
@@ -9,6 +9,10 @@ html, body {
 	height: 100%;
 }
 
+.signed-user {
+	color: $white;
+}
+
 .content-wrapper {
 	min-height: 100%;
 	height: auto !important;
